[project]
name = "runflux"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flux",
    "modal>=1.4.0",
]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torchvision = { index = "pytorch-cpu" }
flux = { git = "https://github.com/BhagyeshKothalkar/flux2" }
